--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,24 @@
   color: #61dafb;
 }
 
+.title-container {
+  display: flex;
+  align-items: flex-start;
+  padding-bottom: 10px;
+  width: 100%;
+  border-bottom: 3px solid grey;
+}
+
+.title {
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.section-container {
+  margin: 40px 0;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
